--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,24 +1,139 @@
-<!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>Flaskr</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ """url_for('auth.logout')""" }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ """#url_for('auth.login')""" }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Octo-Deco - {% block title %}{% endblock %} - Flaskr</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="{{ url_for('static', filename='js/skel.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/skel-panels.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/init.js') }}"></script>
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/skel-noscript.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	</head>
+	<body>
+		<div id="wrapper">
+			
+			<!-- Header -->
+			<div id="header">
+				<div class="container"> 
+					
+					<!-- Logo -->
+					<div id="logo">
+						<h1><a href="/">Octo-Deco</a></h1>
+					</div>
+					
+					<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							{% for x in [('hello', 'Hello'), ('dive.show', 'Dive') ] %}
+								{% if url_for(x[0]).startswith(request.path) %}
+								<li class="active"><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></li>
+								{% else %}
+								<li><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></l>
+								{% endif %}
+							{% endfor %}
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<!-- /Header -->
+			
+			<div id="page">
+				<div class="container">
+					<div class="row">
+						<div class="3u">
+							<section id="sidebard2">
+								<header>
+									<h2>Sidebar 2</h2>
+								</header>
+								<ul class="style1">
+									<li class="first"><span class="fa fa-check"></span><a href="#">Maecenas luctus lectus at sapien</a></li>
+									<li><span class="fa fa-check"></span><a href="#">Etiam rhoncus volutpat erat</a></li>
+									<li><span class="fa fa-check"></span><a href="#">Donec dictum metus in sapien</a></li>
+									<li><span class="fa fa-check"></span><a href="#">Integer gravida nibh quis urna</a></li>
+									<li><span class="fa fa-check"></span><a href="#">Etiam posuere augue sit amet nisl</a></li>
+									<li><span class="fa fa-check"></span><a href="#">Nulla luctus eleifend purus</a></li>
+								</ul>
+								<a href="#" class="button">Full Article</a>
+							</section>
+						</div>
+						
+						
+						<div class="9u skel-cell-important">
+							<section id="content" >
+							{% for message in get_flashed_messages() %}
+								<div class="flash">{{ message }}</div>
+							{% endfor %}
+							<header>
+								{% block header %}{% endblock %}
+							</header>
+							{% block content %}{% endblock %}
+							</section>
+						</div>
+					</div>
+
+				</div>	
+			</div>
+
+
+			<!-- Footer -->
+			<div id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="3u">
+							<section id="box1">
+								<header>
+									<h2>Nulla facilisi</h2>
+								</header>
+								<ul class="style3">
+									<li class="first">
+										<p class="date"><a href="#">10.03.2012</a></p>
+										<p><a href="#">Vestibulum sem magna, elementum ut, vestibulum facilisis. Nulla facilisi. Cum sociis natoque penatibus.</a></p>
+									</li>
+									<li>
+										<p class="date"><a href="#">10.03.2012</a></p>
+										<p><a href="#">Pellentesque erat erat, tincidunt in, eleifend, malesuada bibendum. Suspendisse sit amet  in eros bibendum condimentum. </a> </p>
+									</li>
+								</ul>
+							</section>
+						</div>
+						<div class="6u">
+							<section id="box2">
+								<header>
+									<h2>Donec dictum metus</h2>
+								</header>
+								<div> <a href="#" class="image full"><img src="{{ url_for('static', filename='images/pics02.jpg') }}" alt=""></a> </div>
+								<p>Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl.</p>
+							</section>
+						</div>
+						<div class="3u">
+							<section id="box3">
+								<header>
+									<h2>Gravida ipsum</h2>
+								</header>
+								<ul class="style1">
+									<li class="first"><a href="#">Pellentesque quis elit non lectus eleifend purus condimentum.</a></li>
+									<li><a href="#">Lorem ipsum dolort, consectetuer adipiscing dictum metus sapien.</a></li>
+									<li><a href="#">Phasellus nec dictum metus in sapien pellentesque congue.</a></li>
+									<li><a href="#">Cras vitae metus aliquam risus dictum metus in sapien pharetra.</a></li>
+									<li><a href="#">Duis non dictum metus in sapien ante in metus commodo euismod lobortis.</a></li>
+								</ul>
+							</section>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Copyright -->
+			<div id="copyright">
+				<div class="container">
+					Design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				</div>
+			</div>
+			
+		</div>
+	</body>
+</html>
