--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul>
 							{% for x in [('hello', 'Hello'), ('dive.show', 'Dive') ] %}
-								{% if url_for(x[0]).startswith(request.path) %}
+								{% if request.path.startswith(url_for(x[0])) %}
 								<li class="active"><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></li>
 								{% else %}
 								<li><a href="{{ url_for(x[0]) }}">{{x[1]}}</a></l>
@@ -45,19 +45,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="3u">
-							<section id="sidebard2">
-								<header>
+							<section id="sidebar2">
+								<!--<header>
 									<h2>Sidebar 2</h2>
-								</header>
+								</header>-->
 								<ul class="style1">
-									<li class="first"><span class="fa fa-check"></span><a href="#">Maecenas luctus lectus at sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam rhoncus volutpat erat</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Donec dictum metus in sapien</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Integer gravida nibh quis urna</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Etiam posuere augue sit amet nisl</a></li>
-									<li><span class="fa fa-check"></span><a href="#">Nulla luctus eleifend purus</a></li>
+									{% block sidebaritems %}{% endblock %}
 								</ul>
-								<a href="#" class="button">Full Article</a>
 							</section>
 						</div>
 						
@@ -67,9 +61,9 @@
 							{% for message in get_flashed_messages() %}
 								<div class="flash">{{ message }}</div>
 							{% endfor %}
-							<header>
-								{% block header %}{% endblock %}
-							</header>
+
+							<header><h2>{% block header %}{% endblock %}</h2></header>
+
 							{% block content %}{% endblock %}
 							</section>
 						</div>
@@ -85,42 +79,17 @@
 					<div class="row">
 						<div class="3u">
 							<section id="box1">
-								<header>
-									<h2>Nulla facilisi</h2>
-								</header>
-								<ul class="style3">
-									<li class="first">
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Vestibulum sem magna, elementum ut, vestibulum facilisis. Nulla facilisi. Cum sociis natoque penatibus.</a></p>
-									</li>
-									<li>
-										<p class="date"><a href="#">10.03.2012</a></p>
-										<p><a href="#">Pellentesque erat erat, tincidunt in, eleifend, malesuada bibendum. Suspendisse sit amet  in eros bibendum condimentum. </a> </p>
-									</li>
-								</ul>
+								{% block sidebarleftlow %}{% endblock %}
 							</section>
 						</div>
 						<div class="6u">
 							<section id="box2">
-								<header>
-									<h2>Donec dictum metus</h2>
-								</header>
-								<div> <a href="#" class="image full"><img src="{{ url_for('static', filename='images/pics02.jpg') }}" alt=""></a> </div>
-								<p>Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Duis enim nulla, luctus eu, dapibus lacinia, venenatis id, quam. Vestibulum imperdiet, magna nec eleifend rutrum, nunc lectus vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl.</p>
+								{% block contentlow %}{% endblock %}
 							</section>
 						</div>
 						<div class="3u">
 							<section id="box3">
-								<header>
-									<h2>Gravida ipsum</h2>
-								</header>
-								<ul class="style1">
-									<li class="first"><a href="#">Pellentesque quis elit non lectus eleifend purus condimentum.</a></li>
-									<li><a href="#">Lorem ipsum dolort, consectetuer adipiscing dictum metus sapien.</a></li>
-									<li><a href="#">Phasellus nec dictum metus in sapien pellentesque congue.</a></li>
-									<li><a href="#">Cras vitae metus aliquam risus dictum metus in sapien pharetra.</a></li>
-									<li><a href="#">Duis non dictum metus in sapien ante in metus commodo euismod lobortis.</a></li>
-								</ul>
+								{% block sidebarrightlow %}{% endblock %}
 							</section>
 						</div>
 					</div>
