--- a/flaskr/static/css/style-desktop.css
+++ b/flaskr/static/css/style-desktop.css
@@ -156,7 +156,7 @@
 	}
 
 /*********************************************************************************/
-/* Sidebar    r                                                                  */
+/* Sidebar                                                                       */
 /*********************************************************************************/
 
 	#sidebar1 {
@@ -173,6 +173,3 @@
 	#sidebar2 h2 {
 	}
 
-	#sidebar2 li {
-	display: block;
-	}
