--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,6 +12,7 @@
 		<script src="{{ url_for('static', filename='js/init.js') }}"></script>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/skel-noscript.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style-customs.css') }}">
 	</head>
 	<body>
 		<div id="wrapper">
