--- a/flaskr/templates/dive/show.html
+++ b/flaskr/templates/dive/show.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block extrascripts %}
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+{% endblock %}
+
 {% block header %}
   {% block title %}Dive{% endblock %}
 {% endblock %}
@@ -14,19 +19,25 @@
 {% endblock %}
 
 {% block content %}
-  <a name="diveprofile"></a>
+    <a name="diveprofile"></a>
+    <div class="chart" id="diveprofile">
+        <script>
+            var graphs = {{dive_profile_plot_json | safe}};
+            Plotly.plot('diveprofile',graphs,{});
+        </script>
+    </div>
 
-  <a name="divesummary"></a>
-  <h2>Dive summary</h2>
-  {% for table in tables %}
-  {{ table|safe }}
-  {% endfor %}
+    <a name="divesummary"></a>
+    <h2>Dive summary</h2>
+    {% for table in tables %}
+    {{ table|safe }}
+    {% endfor %}
 
-  <a name="heatmap"></a>
-  <h2>Tissue heatmap</h2>
+    <a name="heatmap"></a>
+    <h2>Tissue heatmap</h2>
 
-  <a name="fulldata"></a>
-  <h2>Full dive data</h2>
+    <a name="fulldata"></a>
+    <h2>Full dive data</h2>
 
 {% endblock %}
 
