--- a/flaskr/static/css/style-customs.css
+++ b/flaskr/static/css/style-customs.css
@@ -27,6 +27,23 @@ div.flash {
 /*
  * Content
  */
+#content h2 {
+    margin-top: 2em;
+}
+
+/* Custom scrollbar */
+::-webkit-scrollbar { width: 8px; height:8px; }
+::-webkit-scrollbar-track { background: #f1f1f1;}
+::-webkit-scrollbar-thumb { background: #888;}
+::-webkit-scrollbar-thumb:hover { background: #555;}
+
+div.bigtable table {
+  display: block;
+  overflow: scroll;
+  width: 100%;
+  height: 200px;
+}
+
 table.dataframe {
     margin: 1em;
 }
@@ -45,11 +62,18 @@ table.dataframe th, td {
     padding: .3em;
     font-family: monospace;
     font-size: .9em;
+    white-space: nowrap;
 }
 
 div.chart {
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
+}
+
+div.viztoggle {
+    display: inline;
+    font-size: 0.5em;
+    margin: 1em;
 }
 
