--- a/flaskr/static/css/style-customs.css
+++ b/flaskr/static/css/style-customs.css
@@ -28,7 +28,8 @@ div.flash {
  * Content
  */
 #content h2 {
-    margin-top: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 /* Custom scrollbar */
