some progress on database things, user profile reset, storing/retrieving dives

--- a/flaskr/static/css/style-customs.css
+++ b/flaskr/static/css/style-customs.css
@@ -78,3 +78,9 @@ div.viztoggle {
     margin: 1em;
 }
 
+div.adjust label, input {
+    vertical-align:middle;
+    line-height: 2em;
+    margin: 10px;
+}
+
