--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Octo-Deco - {% block title %}{% endblock %} - Flaskr</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -64,7 +64,7 @@
 								<div class="flash">{{ message }}</div>
 							{% endfor %}
 
-							<header><h1>{% block header %}{% endblock %}</h1></header>
+							<header><h2>{% block header %}{% endblock %}</h2></header>
 
 							{% block content %}{% endblock %}
 							</section>
