--- a/flaskr/static/css/style-customs.css
+++ b/flaskr/static/css/style-customs.css
@@ -76,6 +76,7 @@ div.viztoggle {
     display: inline;
     font-size: 0.5em;
     margin: 1em;
+    cursor: pointer;
 }
 
 div.adjust label, input {
