--- a/flaskr/templates/dive/show.html
+++ b/flaskr/templates/dive/show.html
@@ -5,11 +5,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 {% endblock %}
 
-{% block header %}
-  {% block title %}Dive{% endblock %}
-{% endblock %}
+{% block title %}Dive{% endblock %}
 
-{# block sidebarheader %} Hello for the {{ session['count'] }}th time {% endblock #}
+{# block sidebarheader %} hello :) {% endblock #}
 
 
 {% block sidebaritems %}
@@ -28,7 +26,7 @@
         </script>
     </div>
 
-    <form method="POST">
+    <form method="POST" action="{{url_for('dive.update', id=dive.dive_id)}}">
         <div class="adjustGF">
             GF
             <label for="ipt_gflow">low</label>
@@ -48,6 +46,10 @@
                     = document.getElementById('ipt_gflow').value
                     = {{dive.gf_low_profile}};
                 return false;">[reset]</a>
+        </div>
+        <div>
+            <input type="submit" name="action" value="Update Display GF">
+            <input type="submit" name="action" value="Update Stops">
         </div>
     </form>
 
