--- a/flaskr/templates/dive/new.html
+++ b/flaskr/templates/dive/new.html
@@ -4,8 +4,12 @@
 
 {% block content %}
     <header><h2>Create new dive</h2></header>
+    <div>
+        Specify gases like &lsquo;Air&rsquo;, &lsquo;Nx32&rsquo;, or &lsquo;Tx21/35&rsquo;.
+        Use &lsquo;Nx99&rsquo; for O<sub>2</sub>.
+    </div>
     <form method="post" action="{{url_for('dive.new_do')}}">
-        <div>
+        <div class="dive_steps">
             <div id="div_depth_times" class="depth_times" style="display:inline;">
             </div>
             <div style="display:inline;">
@@ -13,18 +17,58 @@
             </div>
         </div>
         <script>
+        	/* Adding inputs */
             cnt = -1;
             function add_depth_time()
             {
                 cnt += 1;
                 newdiv = document.createElement("span");
-                newdiv.innerHTML = '<br/>At <input type="text" name="depth['+cnt+']"> m for <input type="text" name="time['+cnt+']"> mins';
+                newdiv.innerHTML =  '<br/>At <input type="text" name="depth['+cnt+']" id="depth['+cnt+']">';
+                newdiv.innerHTML += ' m for <input type="text" name="time['+cnt+']" id="time['+cnt+']"> mins';
+                newdiv.innerHTML += ' on <input type="text" name="gas['+cnt+']" id="gas['+cnt+']" value="Air">.';
                 newdiv.class = 'depth_times_inputs';
                 document.getElementById('div_depth_times').appendChild(newdiv);
             }
             add_depth_time();
+
+            /* Checking inputs */
+            function check_input_nr(elt, minval, maxval, emptyok)
+            {
+				v = elt.value.trim();
+				if (v == '' && emptyok) return true;
+				vn = Number(v);
+				return v == String(vn) && v >= minval && v <= maxval;
+            }
+            function check_gas(elt)
+            {
+            	regex = /^(air|nx[0-9][0-9]|tx[0-9][0-9]\/[0-9][0-9])$/i
+            	v = elt.value.trim();
+            	return v.match(regex);
+            }
+
+            function check_and_mark(elt, ok)
+            {
+            	elt.className = ( ok ? 'valid' : 'invalid');
+            	return ok;
+            }
+            function check_all()
+            {
+            	ok = true;
+				for(i=0;i<=cnt;i++)
+				{
+					d = document.getElementById('depth['+i+']');
+					t = document.getElementById('time['+i+']');
+					g = document.getElementById('gas['+i+']');
+					ok2 = check_and_mark(d, check_input_nr( d, 1, 200, i != 0 ) );
+					ok3 = check_and_mark(t, check_input_nr( t, 1, 200, i != 0 ) );
+					ok4 = check_and_mark(g, check_gas(g));
+					ok = ok && ok2 && ok3 && ok4;
+				}
+				return ok;
+            }
         </script>
-        <input type="submit" value="Create!">
+		<input type="button" value="Check inputs" onclick="return check_all();">
+        <input type="submit" value="Create!" onclick="return check_all();">
     </form>
 
 {% endblock %}
