--- a/flaskr/templates/dive/new.html
+++ b/flaskr/templates/dive/new.html
@@ -8,6 +8,7 @@
         Specify gases like &lsquo;Air&rsquo;, &lsquo;Nx32&rsquo;, or &lsquo;Tx21/35&rsquo;.
         Use &lsquo;Nx99&rsquo; for O<sub>2</sub>.
     </div>
+    <div class="new_dive">
     <form method="post" action="{{url_for('dive.new_do')}}">
         <div class="dive_steps">
             <div id="div_depth_times" class="depth_times" style="display:inline;">
@@ -34,18 +35,27 @@
             add_depth_time();
 
             /* Checking inputs */
-            function check_input_nr(elt, minval, maxval, emptyok)
+            function check_input_nr(s, minval, maxval, emptyok)
             {
-				v = elt.value.trim();
+				v = s.trim();
 				if (v == '' && emptyok) return true;
 				vn = Number(v);
 				return v == String(vn) && v >= minval && v <= maxval;
             }
-            function check_gas(elt)
+            function check_gas(s, emptyok)
             {
             	regex = /^(air|nx[0-9][0-9]|tx[0-9][0-9]\/[0-9][0-9])$/i
-            	v = elt.value.trim();
-            	return v.match(regex);
+            	v = s.trim();
+            	return v.match(regex) ||
+            	        ( v == '' && emptyok );
+            }
+            function check_extra_gases(s)
+            {
+                ss = s.split(',');
+                ok = true;
+                for(i = 0; i < ss.length; i++)
+                    ok = ok && check_gas(ss[i], true);
+                return ok;
             }
 
             function check_and_mark(elt, ok)
@@ -56,22 +66,34 @@
             function check_all()
             {
             	ok = true;
+				/* The list */
 				for(i=0;i<=cnt;i++)
 				{
 					d = document.getElementById('depth['+i+']');
 					t = document.getElementById('time['+i+']');
 					g = document.getElementById('gas['+i+']');
-					ok2 = check_and_mark(d, check_input_nr( d, 1, 200, i != 0 ) );
-					ok3 = check_and_mark(t, check_input_nr( t, 1, 200, i != 0 ) );
-					ok4 = check_and_mark(g, check_gas(g));
+					ok2 = check_and_mark(d, check_input_nr( d.value, 1, 200, i != 0 ) );
+					ok3 = check_and_mark(t, check_input_nr( t.value, 1, 200, i != 0 ) );
+					ok4 = check_and_mark(g, check_gas(g.value, false) );
 					ok = ok && ok2 && ok3 && ok4;
 				}
+				/* The extra gases */
+				eg = document.getElementById('ipt_deco_gas');
+                ok5 = check_and_mark( eg, check_extra_gases( eg.value ) );
+                ok = ok && ok5;
 				return ok;
             }
         </script>
+        <div>
+        <label for="ipt_deco_gas">Additional gases (eg. &lsquo;Nx99, Nx50&rsquo;):</label>
+        <input type="text" id="ipt_deco_gas" name="deco_gas">
+        </div>
+        <div>
 		<input type="button" id="btncheck" value="Check inputs" onclick="return check_all();">
         <input type="submit" id="btnsubmit" value="Create!" onclick="return check_all();">
+        </div>
     </form>
+    </div>
 
 {% endblock %}
 
