--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -99,7 +99,8 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<div class="container">
-					Design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+					<p>Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).
+					<p>Design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
 				</div>
 			</div>
 			
