Make "modify dive" block collapsible in show.html

--- a/flaskr/templates/dive/show.html
+++ b/flaskr/templates/dive/show.html
@@ -29,7 +29,7 @@
     <li><span class="fa fa-chevron-circle-right"></span><a href="#divesummary">Dive summary</a></li>
     <li><span class="fa fa-chevron-circle-right"></span><a href="#aheatmap">Heatmap</a></li>
     <li><span class="fa fa-chevron-circle-right"></span><a href="#afulldata">Full dive data</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#modifydive">Modify</a></li>
+    <li><span class="fa fa-chevron-circle-right"></span><a href="#amodifydive">Modify</a></li>
 {% endblock %}
 
 {% block content %}
@@ -128,9 +128,9 @@
 
 
     <script>
-        function toggleFulldata(toggle_elt)
+        function togglediv(divname, toggle_elt)
         {
-            elt = document.getElementById("fulldata");
+            elt = document.getElementById(divname);
             if ( elt.style.display == "block" )
             {
                 elt.style.display="none";
@@ -145,16 +145,18 @@
     </script>
     <a name="afulldata"></a>
     <h2>Full dive data
-        <div class="viztoggle" onclick="toggleFulldata(this)">[show]</div>
+        <div class="viztoggle" onclick="togglediv('fulldata', this)">[show]</div>
         <div class="viztoggle"><a href="{{url_for('dive.csv',id=dive.dive_id)}}">[csv]</a></div>
     </h2>
     <div id="fulldata" class="bigtable" style="display: none">
         {{ fulldata_table|safe }}
     </div>
 
-    <a name="modifydive"></a>
-    <h2>Modify dive</h2>
-    <div>
+    <a name="amodifydive"></a>
+    <h2>Modify dive
+    <div class="viztoggle" onclick="togglediv('modifydive', this)">[show]</div>
+    </h2>
+    <div id="modifydive" style="display:none">
     <form method="POST" action="{{url_for('dive.delete',id=dive.dive_id)}}">
     <input type="submit" value="Delete this dive" onclick="return confirm('Sure?');">
     </form>
