Fix small issue with [reset] not calling a GF update

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -70,6 +70,7 @@
                 document.getElementById('show_gflow').innerHTML
                     = document.getElementById('ipt_gflow').value
                     = {{dive.gf_low_profile}};
+                autosubmitGF();
                 return false;">[reset]</a>
             GF
             <label for="ipt_gflow">low</label>
