--- a/octodeco/flaskr/templates/dive/new.html
+++ b/octodeco/flaskr/templates/dive/new.html
@@ -95,9 +95,16 @@
     </form>
     </div>
 
+    <header><h2>Upload Shearwater CSV file</h2></header>
+    <form method="post" action="{{url_for('dive.new_shearwater_csv')}}" enctype="multipart/form-data">
+        <input type="file" id="ipt_csv" name="ipt_csv">
+        <input type="submit" value="Go :)" onclick="if(document.getElementById('ipt_csv').files.length == 0) { return false; }">
+    </form>
+
+
     <header><h2>..or just recreate the demo dive:</h2></header>
     <form method="post" action="{{url_for('dive.new_demo')}}">
-        <input type="submit" value="Yes please!">
+        <input type="submit" value="Yes please do that for me!">
     </form>
 {% endblock %}
 
