--- a/octodeco/flaskr/templates/dive/new.html
+++ b/octodeco/flaskr/templates/dive/new.html
@@ -96,6 +96,8 @@
     </div>
 
     <header><h2>Upload Shearwater CSV file</h2></header>
+    <div>Upload CSV file exported from Shearwater. Only time, depth, and gas are used; all other data (like GF, tissue
+        loading) is recomputed.</div>
     <form method="post" action="{{url_for('dive.new_shearwater_csv')}}" enctype="multipart/form-data">
         <input type="file" id="ipt_csv" name="ipt_csv">
         <input type="submit" value="Go :)" onclick="if(document.getElementById('ipt_csv').files.length == 0) { return false; }">
