--- a/octodeco/flaskr/templates/user/info.html
+++ b/octodeco/flaskr/templates/user/info.html
@@ -7,12 +7,13 @@
 
 {% block content %}
     <header><h2>User info</h2></header>
-    <p>user_id: {{ session['user_id'] }} </p>
-    {{ request.environ }}
+    <p>session_id: {{ session['session_id'] }} </p>
+    <p>user details: {{ user_details }} </p>
+    <p>Env: {{ request.environ }}</p>
     <p>Nr dives stored: {{ divecount }} </p>
 
     <form method="post" action="{{url_for('user.update')}}">
-        <input type="submit" name="action" value="Reset profile">
+        <input type="submit" name="action" value="Reset profile" onclick="return confirm('Sure?');">
     </form>
 
     <h2>Dives</h2>
